--- a/globe/index.html
+++ b/globe/index.html
@@ -110,9 +110,10 @@
   </div>
 
   <div id="currentInfo">
-    <span id="year1990" class="year">1990</span>
-    <span id="year1995" class="year">1995</span>
-    <span id="year2000" class="year">2000</span>
+    <span id="year1986" class="year">1986</span>
+    <span id="year1996" class="year">1996</span>
+    <span id="year2006" class="year">2006</span>
+    <span id="year2014" class="year">2014</span>
   </div>
 
   <div id="title">
@@ -133,7 +134,7 @@
       Detector.addGetWebGLMessage();
     } else {
 
-      var years = ['1990','1995','2000'];
+      var years = ['1986', '1996','2006','2014'];
       var container = document.getElementById('container');
       var globe = new DAT.Globe(container);
 
